# home-assistant-ojmicroline-thermostat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  hacs.json  mypy.ini  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: check-syntax.yml  draft-release.yaml  hacs.yml  hassfest.yaml  issues.yaml  linting.yaml  sync-labels.yaml
custom_components/oj_microline_thermostat/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/oj_microline_thermostat/translations/: en.json
custom_components/ojmicroline_thermostat/: __init__.py  api.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  models.py  sensor.py  strings.json
custom_components/ojmicroline_thermostat/translations/: en.json  nl.json  pt-PT.json  pt.json
